api: Implemented serializing of the error message
